# RuConText-Bench

./: README.md  metrics_gpt-4o-mini_temp0_20250516_013857.json  prepare_data.ipynb  pyproject.toml  requirements.txt
data/: coref__anaph_ref_choice_questions.json  coref__are_NPs_coref.json  disrpt.json  disrpt_with_id.json  ellipsis.csv  idiom_literal.json  idiom_three_texts.json  idiom_two_meanings.json  literal.json  rudabank.csv  three_texts.json  two_meanings.json
data/raw/: coref__anaph_ref_choice.json  coref__anaph_ref_choice_questions.json  coref__are_NPs_coref_task.json  coref_prompts.rst
model_interface/: ellipsis_05_05.ipynb  json_to_table.py  run_scoring.py  score.py
